--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -1,44 +1,43 @@
 // Font
 $mainFont                : "Open Sans";
+$fontRoboto              : "Roboto";
 
 // Size
 $mainFontColor           : #101010;
 $mainFontSize            : 18px;
+$titleFontSize           : 50px;
+$headerTitleSize         : 115px;
+$titleFontWeight         : 700;
+$semiBoldFontWeight      : 600;
+$mediumFontWeight        : 500;
 $mainFontWeight          : 400;
 $mainLineHeight          : 1.4;
 
 $desktopWidth            : 1280px;
-$smDesktopWidth          : 980px;
+$smDesktopWidth          : 1000px;
+$smallWidth              : 860px;
 $tableWidth              : 768px;
-$phoneWidth              : 480px;
-$smPhoneWidth            : 320px;
+$phoneWidth              : 650px;
 
 $containerWidth          : 1600px;
 
 // Main color
-$default-color           : #ffffff;
-$primary-color           : #444ce0;
-$success-color           : #26de81;
-$danger-color            : #fc5c65;
-$warning-color           : #fed330;
-$light-color             : #999999;
-$purple-color            : #8854d0;
-
-// Neutral Color
-$neutral-primary         : #303133;
-$neutral-regular         : #606266;
-$neutral-secondary       : #909399;
-$neutral-placeholder     : #C0C4CC;
-
-// Border Color
-$border-base             : #DCDFE6;
-$border-light            : #E4E7ED;
-$border-lighter          : #EBEEF5;
-$border-lightex          : #F2F6FC;
+$defaultColor            : #ffffff;
+$logoGradient            : #FFE917;
+$purppleGragientColor    : #a165f4;
+$violetGradientColor     : #8c84f9;
+$buttonBorderColor       : #917df8;
+$detailsBorderColor      : #7048e2;
+$buttonShadow            : #BDE3EF;
+$dropMenuItem            : #404040;
+$trendTitleColor         : #333333;
+$ShowcaseMenuColor       : #b394fa;
+$productNameColor        : #777777;
+$commitNumbColor         : #bbbbbb;
+$likeIconColor           : #f96290;
+$borderButtonArray       : #000000;
 
 // Time
-$transitionTime          : 0.1s;
-$animationTime           :.2s;
-
-// Other
-$hiddenDisplay           :none;
+$transitionTime          : 0.1s;    // Время анимации всех ховеров
+$scaleButtonAnimation    : 0.2s;    // Время анимации кнопок на карточках товаров
+$scaleDropAnimation      : 0.15s;   // Время анимации выпадающего меню
