--- a/src/assets/scss/blocks/footer.scss
+++ b/src/assets/scss/blocks/footer.scss
@@ -2,7 +2,9 @@
 
 #foot {
 	width: 100%;
-
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 /////////////////////////
@@ -13,21 +15,21 @@
 	width:  100%;
 	height: 415px;
 	position: relative;
-
-
+	display: flex;
+	justify-content: center;
 }
 .back {
-	width: 100%;
+	width: 300%;
 	height: 490px;
 	position: absolute;
 	top: -75px;
-	background: linear-gradient(225deg, rgb(161, 101, 244), rgb(140, 132, 249) 100%);
+	background: linear-gradient(225deg, $purppleGragientColor, $violetGradientColor 100%);
 	z-index: -1;
 }
 .newsletter-content {
 	width: 100%;
 	height: 100%;
-	padding: 80px;
+	padding: 80px 40px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -36,45 +38,70 @@
 }
 .newsletter-title {
 	position: relative;
-
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	width: 100%;
 
 	.title {
 		font-size: 50px;
 		font-weight: bold;
-		color: $default-color;
+		color: $defaultColor;
 		text-align: center;
 		max-width: 1100px;
 		margin: 0 auto;
 		white-space: nowrap;
 	}
+
 	.back-title {
-		font-family: "Roboto";
-		width: 100%;
+		font-family: $fontRoboto;
 		font-size: 150px;
 		line-height: 100%;
 		font-weight: 900;
-		color: $default-color;
+		color: $defaultColor;
 		opacity: 0.04;
 		position: absolute;
 		text-align: center;
-		top: -50%;
+		white-space: nowrap;
 	}
 }
 .email-input {
-	width: 845px;
+	width: 60%;
+	min-width: 400px;
 	height: 75px;
 	border-radius: 40px;
-	background: $default-color;
+	background: $defaultColor;
 	display: flex;
 	justify-content: space-between;
 	padding: 6px 6px 6px 23px;
 	font-size: 20px;
-	font-family: "Open Sans";
+	font-family: $mainFont;
+
+	@media (max-width: $smallWidth) {
+		margin-top: 20px;
+	}
+}
+
+.false-input {
+	width: 60%;
+	min-width: 400px;
+	height: 75px;
+	border-radius: 40px;
+	background: $defaultColor;
+	display: none;
+	justify-content: space-between;
+	padding: 6px 6px 6px 23px;
+	font-size: 20px;
+	font-family: $mainFont;
+	margin-top: 20px;
+
+	@media (max-width: $smallWidth) {
+		//display: flex;
+	}
 }
 
 .email {
-	font-family: "Open Sans";
+	font-family: $mainFont;
 	width: 80%;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -83,12 +110,18 @@
 	&:focus::-webkit-input-placeholder {
 		color: transparent;
 	}
+	&:focus:-moz-placeholder {
+		color: transparent;
+	}
+	&:focus::-moz-placeholder {
+		color: transparent;
+	}
 }
 .email-btn {
-	font-family: "Open Sans";
-	font-weight: 500;
-	color: $default-color;
-	background: linear-gradient(237deg, rgb(161, 101, 244), rgb(140, 132, 249) 100%);
+	font-family: $mainFont;
+	font-weight: $mediumFontWeight;
+	color: $defaultColor;
+	background: linear-gradient(237deg, $purppleGragientColor, $violetGradientColor 100%);
 	min-width: 200px;
 	max-width: 350px;
 	border-radius: 35px;
@@ -98,11 +131,40 @@
 	white-space: nowrap;
 	cursor: pointer;
 	transition: all $transitionTime;
+	text-align: center;
 
 	&:hover {
 		opacity: 0.85;
 	}
+
+	@media (max-width: $smallWidth) {
+		display: none;
+	}
 }
+
+.false-btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100px;
+	border-radius: 35px;
+	background: linear-gradient(237deg, $purppleGragientColor, $violetGradientColor 100%);
+	display: none;
+
+	&>svg {
+		width: 35px;
+	}
+
+	&>svg path {
+		fill: $defaultColor;
+	}
+
+	@media (max-width: $smallWidth) {
+		display: flex;
+	}
+}
+
+
 
 //////////////////////////
 //     Footer Nav       //
@@ -116,27 +178,31 @@
 	align-items: center;
 	row-gap: 27px;
 	padding: 63px 0 51px;
-	//padding-bottom: 50px;
 }
 .categories-list {
-	display: flex;
-	justify-content: center;
-	align-items:center;
-	column-gap: 25px;
+	display: grid;
+	grid-column-gap: 25px;
+	grid-template-columns: repeat(6, auto);
+
+	@media (max-width: $tableWidth) {
+		grid-template-columns: repeat(3, auto);
+	}
 }
 .categories-item {
 	padding: 10px;
 	cursor: pointer;
+	min-width: 100px;
 	max-width: 100px;
+	text-align: center;
 
 	a {
 		text-align: center;
 		font-size: 18px;
-		font-weight: 600;
-		color: #404040;
+		font-weight: $semiBoldFontWeight;
+		color: $dropMenuItem;
 
 		&:hover {
-			color: #917df8;
+			color: $buttonBorderColor;
 		}
 	}
 }
@@ -144,9 +210,9 @@
 	max-width: 80%;
 
 	.title {
-		font-family: "Roboto";
+		font-family: $fontRoboto;
 		font-size: 40px;
-		font-weight: 500;
+		font-weight: $mediumFontWeight;
 	}
 }
 
@@ -158,12 +224,12 @@
 /////////////////////////
 
 .copyright {
-	width: 100%;
+	width: 300%;
 	height: 65px;
 	text-align: center;
 	font-size: 15px;
-	font-weight: 400;
-	color: #777777;
+	font-weight: $mainFontWeight;
+	color: $productNameColor;
 	background: #f6f5f7;
 	display: flex;
 	align-items: center;
