--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,6 +8,10 @@
 @import "blocks/social";
 @import "utils/animations";
 @import "utils/decor-pospions";
+@import "utils/product-card";
+@import "blocks/showcase-menu";
+@import "blocks/burger-menu";
+@import "utils/emerge-menu";
 
 html {
   line-height: $mainLineHeight;
@@ -28,16 +32,21 @@ html {
 body {
   margin: 0;
   padding: 0;
+  min-width: 480px;
+  width: 100%;
   font-family: $mainFont;
   font-size: $mainFontSize;
   font-weight: $mainFontWeight;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 * {
   box-sizing: border-box;
-
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -50,6 +59,14 @@ ul, li {
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+#app {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .wrapper {
@@ -69,149 +86,77 @@ ul, li {
   position: relative;
   width: (1380 / 1600 * 100%);
   margin-top: 30px;
-  padding: 75px 100px 140px;
-  background: $default-color;
+  padding: 75px 100px;
+  background: $defaultColor;
   box-shadow: 0px 5px 50px 3px rgba(237, 235, 253, 0.75);
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 65px;
+
+  @media (max-width: $desktopWidth) {
+    padding: 60px 5%;
+  }
+
+  @media (max-width: $smallWidth) {
+    padding: 60px 7%;
+    width: 100%;
+  }
 }
 
 .trend-title {
-  font-size: 50px;
+  font-size: $titleFontSize;
   max-width: 900px;
   z-index: 2;
   .title {
-    font-weight: 700;
-    color: #333333;
+    font-weight: $titleFontWeight;
+    color: $trendTitleColor;
     text-align: center;
+
+    @media (max-width: $smallWidth) {
+      font-size: 44px;
+    }
   }
 }
 .trend-content {
   width: 100%;
-  //display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 6%;
+  grid-column-gap: 6%;
+  grid-row-gap: 40px;
+
+  @media (max-width: $phoneWidth) {
+    grid-template-columns: repeat(2, auto);
+    grid-column-gap: 2%;
+  }
 }
 .trend-content-bags {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 6%;
+  grid-column-gap: 6%;
+  grid-row-gap: 40px;
+
+  @media (max-width: $phoneWidth) {
+    grid-template-columns: repeat(2, auto);
+    grid-column-gap: 2%;
+
+  }
 }
-
-/////////////////////
-//  Product card   //
-/////////////////////
-
-.product-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 56px 30px;
-  row-gap: 15px;
+#trendly-watch {
+  row-gap: 0;
+  padding-bottom: 100px;
   position: relative;
-  transition: all $transitionTime;
 
-  &:hover {
-    box-shadow: 0px 5px 48px 3px rgba(202, 236, 247, 0.7);
-    padding-bottom: 66px;
-    padding-top: 46px;
-  }
-
-  &:hover>button, &:hover>.likes, &:hover>.commits {
-    opacity: 1;
-    transition: all $transitionTime;
-  }
-  &:hover>.product-price {
-    color: #8c84f9;
+  .trend-content {
+    margin-top: 60px;
   }
 }
-.product-img {
-  width: (245 / 353.33 * 100%);
-  display: flex;
-  justify-content: center;
 
-  img {
-    object-fit: contain;
-  }
+.on {
+	display: grid;
 }
-.product-name {
-  text-align: center;
-  color: #777777;
-  margin-top: 33px;
-}
-.product-price {
-  text-align: center;
-  color: #333333;
-  font-size: 25px;
-  font-weight: 500;
-  margin-top: 5px;
-}
-
-.add-to-cart {
-  opacity: 0;
-  position: absolute;
-  height: 60px;
-  min-width: 100px;
-  max-width: 250px;
-  padding: 0 50px;
-  border-radius: 30px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  font-size: 20px;
-  color: $default-color;
-  background: linear-gradient(64deg, rgb(140, 132, 249), rgb(161, 101, 244) 100%);
-  bottom: -30px;
-  cursor: pointer;
-  box-shadow: 5px 5px 25px 5px rgba(240, 239, 254, 0.7);
-}
-
-.content-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.likes {
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  width: 100px;
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #bbbbbb;
-  font-size: 14px;
-  column-gap: 5px;
-  cursor: pointer;
-}
-.likes-icon {
-  width: 20px;
-  height: 20px;
-}
-.active  {
-  fill: #f96290;
-  stroke: #f96290;
-}
-.commits {
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: 0;
-  width: 100px;
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #bbbbbb;
-  font-size: 14px;
-  column-gap: 5px;
-  cursor: pointer;
+.off {
+	display: none;
 }
 
 ////////////////////////////
@@ -222,15 +167,29 @@ ul, li {
   width: 100%;
   position: relative;
 
+	//display: none;
+
   .container {
+    width: (1250 / 1600 * 100%);
     padding: 32px 0 40px 40px;
     position: relative;
     left: 0;
+
+    @media (max-width: $smallWidth) {
+      width: 100%;
+      padding: 40px;
+      padding-top: 80px;
+    }
   }
 }
 
 .presentation-container {
   display: flex;
+
+  @media (max-width: $smallWidth) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .presentation-desc {
   width: 42%;
@@ -239,20 +198,24 @@ ul, li {
   justify-content: center;
   align-items: flex-start;
   row-gap: 20px;
+
+  @media (max-width: $smallWidth) {
+    width: 100%;
+  }
 }
 
 .presentation-title h2 {
-  font-size: 50px;
+  font-size: $titleFontSize;
   line-height: 1;
-  font-weight: 700;
-  color: #333333;
+  font-weight: $titleFontWeight;
+  color: $trendTitleColor;
 }
 .brand-title {
 
   h3 {
     font-size: 25px;
     line-height: 34px;
-    color: #333333;
+    color: $trendTitleColor;
   }
   a {
     color: #8d83f9;
@@ -271,7 +234,14 @@ ul, li {
   min-height: 750px;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
+  @media (max-width: $smDesktopWidth) {
+    margin-left: 5%;
+  }
+
+  @media (max-width: $smallWidth) {
+    width: 100%;
+  }
 }
 
 .bg-img {
@@ -279,11 +249,15 @@ ul, li {
   height: 705px;
   background: url("/assets/img/phone.png");
   background-repeat: no-repeat;
-  position: absolute;
-  left: 170px;
-  top: 75px;
-}
+  position: relative;
+  margin-top: 75px;
 
+  @media (max-width: $smallWidth) {
+    position: relative;
+    left: 0;
+    margin-top: 120px;
+  }
+}
 .bg-circle {
   width: 402px;
   height: 402px;
@@ -291,94 +265,15 @@ ul, li {
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
-  top: 0px;
-  right: 0px;
+  left: 25%;
+  top: -10%;
   z-index: -1;
-}
 
-///////////////////////////
-//    Showcase Menu      //
-///////////////////////////
-
-#trendly-watch {
-  row-gap: 0;
-  padding-bottom: 100px;
-  position: relative;
-
-  .trend-content {
-    margin-top: 60px;
-
-  }
-
-  .product-img {
-    width: 220px;
-    height: 220px;
+  @media (max-width: $smallWidth) {
+    left: 20%;
+    top: -12%;
   }
 }
-
-.showcase-nav {
-  width: 100%;
-  margin-top: 87px;
-  max-width: 1100px;
-  min-height: 65px;
-  border-radius: 35px;
-  box-shadow: 0px 5px 47.5px 2.5px rgba(239, 239, 240, 0.75);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.showcase-list {
-  width: 85%;
-  min-height: 65px;
-  display: grid;
-  grid-template-columns: repeat(6 , auto);
-  //justify-content: space-evenly;
-  //align-items: center;
-}
-.showcase-item {
-  margin: 0 4px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  height: 100%;
-  font-family: "Open Sans";
-  font-size: 15px;
-  font-weight: 600;
-  color: #000000;
-
-  transition: all $transitionTime;
-
-  &:hover {
-    color: #b394fa;
-  }
-
-  &.active {
-    cursor: default;
-    color: #b394fa;
-    transform: scale(1.3);
-    text-shadow: -1px 9px 5px #d5c8f7;
-  }
-}
-
-
-//.fashion {
-//  display: none;
-//}
-//.furnitures {
-//  display: none;
-//}
-//.mobile {
-//  display: none;
-//}
-//.cloth {
-//  display: none;
-//}
-//.toys {
-//  display: none;
-//}
 
 
 
