--- a/src/assets/scss/utils/animations.scss
+++ b/src/assets/scss/utils/animations.scss
@@ -3,21 +3,21 @@
 }
 
 .product-card:hover>.scale-animation{
-	animation: scale-up $animationTime cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
+	animation: scale-up $scaleButtonAnimation cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
 }
 
 @keyframes scale-up {
 	from {
-		transform: scale(0.1);
+		transform: scale(0.8);
 	}
 	to {
-		transform: scale(0.8);
+		transform: scale(1);
 	}
 }
 
 .scale-drop {
 	transform-origin: top;
-	animation: scale-drop-menu .15s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
+	animation: scale-drop-menu $scaleDropAnimation cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
 }
 
 @keyframes scale-drop-menu {
@@ -28,40 +28,31 @@
 	to {
 		transform: scaleY(1);
 	}
-
 }
 
-.scale-left {
-	transform-origin: left;
-	animation: scale-off .5s linear both;
+.show-menu {
+	animation: scale-off 0.2s linear both;
 }
 
 @keyframes scale-off {
 	from {
-		transform: scaleX(1);
+		opacity: 0;
 	}
 	to {
-		transform: scaleX(0);
+		opacity: 1;
 	}
 }
 
 .scale-right {
-	transform-origin: right;
-	animation: scale-on .5s linear both;
+	animation: scale-on 0.2s both;
 }
 
 @keyframes scale-on {
 	from {
-		transform: scaleX(0);
+		left: -50%;
 	}
 	to {
-		transform: scaleX(1);
+		left: 0;
 	}
 }
 
-.on {
-	display: grid;
-}
-.off {
-	display: none;
-}
