--- a/src/assets/scss/blocks/social.scss
+++ b/src/assets/scss/blocks/social.scss
@@ -33,19 +33,19 @@
 			transition: all $transitionTime;
 		}
 	}
-	#facebook > svg {
+	.facebook > svg {
 		width: 25px;
 		height: 23px;
 	}
-	#google-plus > svg {
+	.google-plus > svg {
 		width: 35px;
 		height: 30px;
 	}
-	#instagram > svg {
+	.instagram > svg {
 		width: 23px;
 		height: 22px;
 	}
-	#twitter > svg{
+	.twitter > svg{
 		width: 22px;
 		height: 22px;
 	}
