--- a/src/pug/includes/modules/emerge-menu.pug
+++ b/src/pug/includes/modules/emerge-menu.pug
@@ -1,5 +1,5 @@
 block variable
-	
+
 .emerge-background
 	.emerge-bg
 	.emerge-menu
@@ -11,4 +11,4 @@ block variable
 					li(data-tab-block= item.link).category-item
 						a(href= item.link).category-link= item.name
 		include social
-		.closed-menu &#x2716
+		.closed-menu &#x2716;
