--- a/src/pug/includes/modules/burger-menu.pug
+++ b/src/pug/includes/modules/burger-menu.pug
@@ -2,19 +2,19 @@ block variables
 
 .burger-menu
 	.burger
-		.burger-button &#x2630
+		.burger-button &#x2630;
 		.burger-logo
 			p.logo Big Shop
 	.burger-search
 		.form-src
-			form(action="" method="post" target="_blank").source
-				input(type="image" src="/assets/img/search-icon.png").src-icon
+			form(action="#" method="post" target="_blank").source
+				input(type="image" src="/assets/img/search-icon.png" alt="search-icon").src-icon
 				input(type="search", placeholder="Search").button-src
 		.burger-drop
 			button.button-collection
-				.collection-desc Collection
-				.array
-					.button-array
+				span.collection-desc Collection
+				span.array
+					span.button-array
 			.drop-menu
 					ul.drop-list
 						for key in dropMenu
