--- a/src/pug/includes/modules/header.pug
+++ b/src/pug/includes/modules/header.pug
@@ -2,11 +2,10 @@ block variables
 
 header#head
   .bg-image
-    img(src="/assets/img/face.jpg")
+    img(src="/assets/img/face.jpg" alt="Face image")
   .background
-    //div.bg-gradient
     div.bg-effects
-      img(src="/assets/img/gradient-effect.png")
+      img(src="/assets/img/gradient-effect.png" alt="Background decor")
     .bg-ring.decor(data-parallax=0.5)
     .bg-quad.decor(data-parallax=1.5)
   .container
@@ -16,15 +15,15 @@ header#head
           p.logo Big Shop
         .buttons
           .header-button
-            form(action="" method="post" target="_blank").source
+            form(action="#" method="post" target="_blank").source
               button.src-icon
-                <?xml version="1.0" ?><svg enable-background="new 0 0 32 32" id="Glyph" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.414,24.586l-5.077-5.077C23.386,17.928,24,16.035,24,14c0-5.514-4.486-10-10-10S4,8.486,4,14  s4.486,10,10,10c2.035,0,3.928-0.614,5.509-1.663l5.077,5.077c0.78,0.781,2.048,0.781,2.828,0  C28.195,26.633,28.195,25.367,27.414,24.586z M7,14c0-3.86,3.14-7,7-7s7,3.14,7,7s-3.14,7-7,7S7,17.86,7,14z" id="XMLID_223_"/></svg>
-              //input(type="image" src="/assets/svg/search.svg").src-icon
+                <svg enable-background="new 0 0 32 32" class="Glyph" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.414,24.586l-5.077-5.077C23.386,17.928,24,16.035,24,14c0-5.514-4.486-10-10-10S4,8.486,4,14  s4.486,10,10,10c2.035,0,3.928-0.614,5.509-1.663l5.077,5.077c0.78,0.781,2.048,0.781,2.828,0  C28.195,26.633,28.195,25.367,27.414,24.586z M7,14c0-3.86,3.14-7,7-7s7,3.14,7,7s-3.14,7-7,7S7,17.86,7,14z" class="XMLID_223_"/></svg>
               input(type="search", placeholder="Search").button-src
-            button.button-collection
-              .collection-desc Collection
-              .array
-                .button-array
+            .header-drop
+              button.button-collection
+                span.collection-desc Collection
+                span.array
+                  span.button-array
               .drop-menu
                 ul.drop-list
                   for key in dropMenu
@@ -40,14 +39,14 @@ header#head
             span.white-color  OFF
         .details-container
           button.details
-            .details-desc Details
-            .details-arrow
+            span.details-desc Details
+            span.details-arrow
               <svg xmlns="http://www.w3.org/2000/svg" width="18" height="9" viewBox="0 0 18 9">
               <defs>
               <style> .cls-1 {fill-rule: evenodd;}
               </style>
               </defs>
-              <path id="_" data-name="" class="cls-1" d="M17.257,4.31L13.4,0.795a0.323,0.323,0,0,0-.352-0.05,0.291,0.291,0,0,0-.191.291v2.25H0.321A0.309,0.309,0,0,0,0,3.607V5.536a0.309,0.309,0,0,0,.321.321H12.857v2.25a0.3,0.3,0,0,0,.191.291,0.313,0.313,0,0,0,.352-0.06l3.857-3.556a0.329,0.329,0,0,0,.1-0.241,0.318,0.318,0,0,0-.1-0.231h0Z"/>
+              <path class="_" data-name="" d="M17.257,4.31L13.4,0.795a0.323,0.323,0,0,0-.352-0.05,0.291,0.291,0,0,0-.191.291v2.25H0.321A0.309,0.309,0,0,0,0,3.607V5.536a0.309,0.309,0,0,0,.321.321H12.857v2.25a0.3,0.3,0,0,0,.191.291,0.313,0.313,0,0,0,.352-0.06l3.857-3.556a0.329,0.329,0,0,0,.1-0.241,0.318,0.318,0,0,0-.1-0.231h0Z"/>
               </svg>
 
 
