изменены настройки вебпак

--- a/src/pug/includes/modules/burger-menu.pug
+++ b/src/pug/includes/modules/burger-menu.pug
@@ -8,7 +8,7 @@ block variables
 	.burger-search
 		.form-src
 			form(action="#" method="post" target="_blank").source
-				input(type="image" src="/assets/img/search-icon.png" alt="search-icon").src-icon
+				input(type="image" src="assets/img/search-icon.png" alt="search-icon").src-icon
 				input(type="search", placeholder="Search").button-src
 		.burger-drop
 			button.button-collection
