--- a/src/pug/includes/modules/header.pug
+++ b/src/pug/includes/modules/header.pug
@@ -2,10 +2,10 @@ block variables
 
 header#head
   .bg-image
-    img(src="/assets/img/face.jpg" alt="Face image")
+    img(src="assets/img/face.jpg" alt="Face image")
   .background
     div.bg-effects
-      img(src="/assets/img/gradient-effect.png" alt="Background decor")
+      img(src="assets/img/gradient-effect.png" alt="Background decor")
     .bg-ring.decor(data-parallax=0.5)
     .bg-quad.decor(data-parallax=1.5)
   .container
